# synacor-challenge

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_tests  synacor.sublime-project  synacor_vm_dump.dmp
assembler/: README.md  assembler.cpp  assembler.h
programs/: sample.asm
src/: CMakeLists.txt  address.h  cpu.cpp  cpu.h  execution_wrapper.cpp  execution_wrapper.h  flags.h  instruction.h  integer.h  main.cpp  processes.cpp  processes.h  serializer.cpp  serializer.h  virtual_machine.cpp  virtual_machine.h  virtual_memory.h  word.h
test/: CMakeLists.txt  run_tests.cpp  test_address.h  test_word.h
